--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,34 @@
 }
 
 .player {
-  margin: auto;
   margin-top: 50px;
 }
 
 .notetaking {
   margin: auto;
   margin-top: 5px;
+}
+
+
+.player {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+
+.appbody {
+  display: grid;
+  grid-template-columns: 75% 20%;
+  grid-gap: 1em;
+}
+
+/* Demo Specific Styles */
+.appbody {
+  margin: 0 auto;
+  padding: 1em 0;
+}
+.slider {
+  max-width: 40%;
 }
