--- a/src/note-taking.css
+++ b/src/note-taking.css
@@ -1,10 +1,19 @@
 @import '~antd/dist/antd.css';
 
 .draft-root {
-    margin: auto;
+    margin-left: 10%;
+    margin-right: 10%;
     background: #fff;
     border: 1px solid rgb(75, 30, 30);
     font-family: Georgia,serif;
     font-size: 14px;
     padding: 15px;
+    text-align: right;
+}
+
+.category-group {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-family: Georgia,serif;
+    font-size: 14px;
 }
