--- a/src/live-note.css
+++ b/src/live-note.css
@@ -1,4 +1,3 @@
-
 .bg {
   margin-left: 20%;
   margin-right: 20%;
@@ -8,7 +7,6 @@
   font-family: "Open Sans", SemiBold;
   font-size: 16px;
   color: white;
-  /* padding: 15px; */
   text-align: center;
   display: flex;
   height: 68px;
@@ -30,6 +28,7 @@
   padding: 7px;
   text-align: left;
   overflow: auto;
+  width: 790px;
 }
 
 .reactions-container {
