--- a/src/note-collection.css
+++ b/src/note-collection.css
@@ -18,7 +18,16 @@
 }
 
 .noteimg {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
     object-fit: contain;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
+}
+
+.noteheader {
+    justify-content: space-between;
+    display: flex;
 }
