--- a/src/progressBar.module.css
+++ b/src/progressBar.module.css
@@ -26,6 +26,7 @@
   -webkit-appearance: none !important;
   width: 18px;
   height: 18px;
+
   border: solid 0.5px #e6e6e6;
   border-radius: 50%;
   background-color: white;
@@ -34,6 +35,8 @@
 .stepContainer {
   display: flex;
   top: 10px;
+  height: 20px;
+  width: 65vw;
   background-color: rgba(160, 160, 160, 0.616);
   /* justify-content: space-between; */
 }
@@ -50,7 +53,72 @@
 
 .noteicon {
   position: absolute;
+  transform: translateX(-50%);
+}
 
+.notecontainer {
+  position: absolute;
+  top: -100px;
+  left: 10%;
+  background: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 7px;
+  font-family: "Open Sans", SemiBold;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  display: flex;
+  height: 68px;
+  width: 80%;
+}
+
+.categorybg {
+  width: 63px;
+  flex-shrink: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 7px 0 0 7px;
+  font-family: "Open Sans", SemiBold;
+  font-size: 11px;
+  color: white;
+  text-align: center;
+  padding-top: 13px;
+}
+
+.livenotecontent {
+  padding: 7px;
+  text-align: left;
+  overflow: auto;
+  width: 790px;
+}
+
+.reactionscontainer {
+  align-self: right;
+  height: 45px;
+  width: 90px;
+  flex-shrink: 0;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 30px;
+  align-self: center;
+  margin-left: 10px;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.reaction {
+  align-self: right;
+  height: 35px;
+  width: 35px;
+  flex-shrink: 0;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 30px;
+  font-size: 20px;
+}
+
+.rotate180 {
+  transform: rotate(180deg);
+  padding-top: 3pt;
 }
 
 /* step별 툴팁
