--- a/src/Video.css
+++ b/src/Video.css
@@ -1,12 +1,23 @@
+.video-player-container {
+    position: relative;
+    background: rgba(0, 0, 0);
+    width: 80vw;
+    display: flex;
+    justify-content: center;
+}
+
+.video-container {
+    height: 80vh;
+}
+
 .note-and-slider-container {
     display: flex;
     width: 90vw;
     align-items: flex-start;
+    padding-top: 10px;
 }
 
 .slider-container {
-    /* position: relative;
-    top: 600px; */
     background: rgba(0, 0, 0, 0.6);
     border-radius: 7px;
     width: 300px;
