--- a/src/note-taking.css
+++ b/src/note-taking.css
@@ -19,11 +19,33 @@
     font-size: 16px;
 }
 
+.screenshot-editor-container {
+    background: rgba(255, 255, 255, 0.8);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .note-taking-container {
-    margin-left: 30%;
-    margin-right: 30%;
     text-align: center;
     display: flex;
-    position: relative;
-    top: -1000px;
+    position: absolute;
+    top: 6vh;
+    left: 50vw;
+    z-index: 10;
+}
+
+.screenshot-picture-container {
+    border: 4px solid rgb(238, 222, 5);
+}
+
+.lineweight-container {
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 7px;
+    width: 300px;
+    padding: 10px;
+    margin-top: 5px;
+    margin-left: 25%;
 }
