--- a/src/note-taking.css
+++ b/src/note-taking.css
@@ -20,12 +20,12 @@
 }
 
 .screenshot-editor-container {
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(50, 50, 50, 0.8);
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    padding-left: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
 
 .note-taking-container {
@@ -38,7 +38,9 @@
 }
 
 .screenshot-picture-container {
-    border: 4px solid rgb(238, 222, 5);
+    border-top: 4px solid rgb(238, 222, 5);
+    border-left: 4px solid rgb(238, 222, 5);
+    border-bottom: 4px solid rgb(238, 222, 5);
 }
 
 .lineweight-container {
