--- a/src/note-collection.css
+++ b/src/note-collection.css
@@ -12,27 +12,27 @@
     display: flex;
 }
 
-.awesome {
+.challenging {
     color: rgb(226, 204, 0);
     font-weight: bold;
 }
 
-.if {
+.skill {
     color: rgb(66, 119, 59);
     font-weight: bold;
 }
 
-.why {
+.distinctive {
     color: rgb(19, 109, 212);
     font-weight: bold;
 }
 
-.difficult {
+.opportunity {
     color: rgb(201, 94, 67);
     font-weight: bold;
 }
 
-.useful {
+.others {
     color: rgb(64, 45, 88);
     font-weight: bold;
 }
