--- a/src/note-taking.css
+++ b/src/note-taking.css
@@ -9,7 +9,7 @@
     font-size: 16px;
     padding: 15px;
     text-align: right;
-    width: 60vw;
+    width: 54vw;
 }
 
 .category-group {
@@ -50,4 +50,8 @@
     padding: 10px;
     margin-top: 5px;
     margin-left: 25%;
+}
+
+.note-header {
+    width: 70vw;
 }
